[project]
name = "bus-headcount-counter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-sort-realtime>=1.3.2",
    "flask>=3.1.2",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.205",
]
